--- a/lsbatch/cmd/Makefile.am
+++ b/lsbatch/cmd/Makefile.am
@@ -21,6 +21,9 @@ badmin_LDADD = ../../lsf/lsadm/startup.o \
 if !CYGWIN
 badmin_LDADD += -lnsl
 endif
+if SOLARIS
+badmin_LDADD += -lsocket -lnsl
+endif
 
 bkill_SOURCES = bkill.c cmd.sig.c cmd.jobid.c cmd.err.c
 bkill_LDADD = \
@@ -31,6 +34,9 @@ bkill_LDADD = \
 if !CYGWIN
 bkill_LDADD += -lnsl
 endif
+if SOLARIS
+bkill_LDADD += -lsocket -lnsl
+endif
 
 bparams_SOURCES = bparams.c cmd.h
 bparams_LDADD =   \
@@ -40,7 +46,9 @@ bparams_LDADD =   \
 if !CYGWIN
 bparams_LDADD += -lnsl
 endif
-
+if SOLARIS
+bparams_LDADD += -lsocket -lnsl
+endif
 
 brestart_SOURCES = brestart.c cmd.sub.c cmd.jobid.c \
 	cmd.err.c cmd.h
@@ -51,7 +59,9 @@ brestart_LDADD =   \
 if !CYGWIN
 brestart_LDADD += -lnsl
 endif
-
+if SOLARIS
+brestart_LDADD += -lsocket -lnsl
+endif
 
 btop_SOURCES = btop.c cmd.move.c cmd.jobid.c cmd.misc.c \
 	 cmd.prt.c cmd.err.c cmd.h
@@ -62,7 +72,9 @@ btop_LDADD =  \
 if !CYGWIN
 btop_LDADD += -lnsl
 endif
-
+if SOLARIS
+btop_LDADD += -lsocket -lnsl
+endif
 
 bbot_SOURCES = bbot.c cmd.move.c cmd.jobid.c cmd.misc.c \
 	 cmd.prt.c cmd.err.c cmd.h
@@ -73,7 +85,9 @@ bbot_LDADD =   \
 if !CYGWIN
 bbot_LDADD += -lnsl
 endif
-
+if SOLARIS
+bbot_LDADD += -lsocket -lnsl
+endif
 
 bmgroup_SOURCES = bmgroup.c cmd.misc.c cmd.h
 bmgroup_LDADD =   \
@@ -83,7 +97,9 @@ bmgroup_LDADD =   \
 if !CYGWIN
 bmgroup_LDADD += -lnsl
 endif
-
+if SOLARIS
+bmgroup_LDADD += -lsocket -lnsl
+endif
 
 bpeek_SOURCES = bpeek.c cmd.err.c cmd.jobid.c cmd.misc.c cmd.prt.c cmd.h
 bpeek_LDADD =  \
@@ -93,7 +109,9 @@ bpeek_LDADD =  \
 if !CYGWIN
 bpeek_LDADD += -lnsl
 endif
-
+if SOLARIS
+bpeek_LDADD += -lsocket -lnsl
+endif
 
 brun_SOURCES = brun.c cmd.jobid.c cmd.err.c cmd.h
 brun_LDADD =   \
@@ -103,7 +121,9 @@ brun_LDADD =   \
 if !CYGWIN
 brun_LDADD += -lnsl
 endif
-
+if SOLARIS
+brun_LDADD += -lsocket -lnsl
+endif
 
 busers_SOURCES = busers.c cmd.misc.c
 busers_LDADD =  \
@@ -113,7 +133,9 @@ busers_LDADD =  \
 if !CYGWIN
 busers_LDADD += -lnsl
 endif
-
+if SOLARIS
+busers_LDADD += -lsocket -lnsl
+endif
 
 bhosts_SOURCES = bhosts.c cmd.prt.c cmd.misc.c cmd.h
 bhosts_LDADD =  \
@@ -122,6 +144,9 @@ bhosts_LDADD =  \
 	../../lsf/intlib/liblsfint.a  -lm
 if !CYGWIN
 bhosts_LDADD += -lnsl
+endif
+if SOLARIS
+bhosts_LDADD += -lsocket -lnsl
 endif
 
 bmig_SOURCES = bmig.c cmd.jobid.c cmd.err.c cmd.h
@@ -132,6 +157,9 @@ bmig_LDADD =   \
 if !CYGWIN
 bmig_LDADD += -lnsl
 endif
+if SOLARIS
+bmig_LDADD += -lsocket -lnsl
+endif
 
 bqueues_SOURCES = bqueues.c cmd.prt.c cmd.misc.c cmd.h
 bqueues_LDADD = \
@@ -141,6 +169,9 @@ bqueues_LDADD = \
 if !CYGWIN
 bqueues_LDADD += -lnsl
 endif
+if SOLARIS
+bqueues_LDADD += -lsocket -lnsl
+endif
 
 bsub_SOURCES = bsub.c cmd.sub.c cmd.jobid.c cmd.err.c cmd.h
 bsub_LDADD =   \
@@ -149,6 +180,9 @@ bsub_LDADD =   \
 	../../lsf/intlib/liblsfint.a  -lm
 if !CYGWIN
 bsub_LDADD += -lnsl
+endif
+if SOLARIS
+bsub_LDADD += -lsocket -lnsl
 endif
 
 bjobs_SOURCES = bjobs.c cmd.prt.c cmd.err.c cmd.job.c \
@@ -160,6 +194,9 @@ bjobs_LDADD =  \
 if !CYGWIN
 bjobs_LDADD += -lnsl
 endif
+if SOLARIS
+bjobs_LDADD += -lsocket -lnsl
+endif
 
 bmod_SOURCES = bmod.c cmd.sub.c cmd.jobid.c cmd.err.c cmd.h
 bmod_LDADD =  \
@@ -168,6 +205,9 @@ bmod_LDADD =  \
 	../../lsf/intlib/liblsfint.a  -lm
 if !CYGWIN
 bmod_LDADD += -lnsl
+endif
+if SOLARIS
+bmod_LDADD += -lsocket -lnsl
 endif
 
 brequeue_SOURCES = brequeue.c cmd.jobid.c cmd.err.c cmd.h
@@ -178,6 +218,9 @@ brequeue_LDADD =   \
 if !CYGWIN
 brequeue_LDADD += -lnsl
 endif
+if SOLARIS
+brequeue_LDADD += -lsocket -lnsl
+endif
 
 bswitch_SOURCES = bswitch.c cmd.jobid.c cmd.err.c cmd.h
 bswitch_LDADD =  \
@@ -186,6 +229,9 @@ bswitch_LDADD =  \
 	../../lsf/intlib/liblsfint.a  -lm
 if !CYGWIN
 bswitch_LDADD += -lnsl
+endif
+if SOLARIS
+bswitch_LDADD += -lsocket -lnsl
 endif
 
 install-data-local:
