--- a/chkpnt/Makefile.am
+++ b/chkpnt/Makefile.am
@@ -13,3 +13,8 @@ echkpnt_LDADD = ../lsf/lib/liblsf.a
 
 erestart_SOURCES = erestart.c echkpnt.env.c echkpnt.lib.c echkpnt.lib.h echkpnt.env.h
 erestart_LDADD = ../lsf/lib/liblsf.a
+if SOLARIS
+echkpnt_LDADD += -lsocket -lnsl
+erestart_LDADD += -lsocket -lnsl
+endif
+
