--- a/eauth/Makefile.am
+++ b/eauth/Makefile.am
@@ -9,3 +9,7 @@ INCLUDES = -I$(top_srcdir)/lsf
 sbin_PROGRAMS = eauth
 eauth_SOURCES = eauth.c
 eauth_LDADD = ../lsf/lib/liblsf.a ../lsf/intlib/liblsfint.a
+if SOLARIS
+eauth_LDADD += -lsocket -lnsl
+endif
+
