--- a/lsf/lsadm/Makefile.am
+++ b/lsf/lsadm/Makefile.am
@@ -11,4 +11,7 @@ bin_PROGRAMS = lsadmin
 lsadmin_SOURCES = lsadmin.c startup.c cmd.limcontrol.c \
                    cmd.rescontrol.c lsadmin.h
 lsadmin_LDADD =  ../lib/liblsf.a ../intlib/liblsfint.a
+if SOLARIS
+lsadmin_LDADD += -lsocket -lnsl
+endif
 
